:books: Docs: add env example #3

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
-dbUser=admin
-dBPassword=password
-dbHost=localhost
-dbPort=3306
-dbName=test
+DB_USER=root
+DB_PASSWORD=password
+DB_HOST=db
+DB_PORT=3306
+DB_NAME=boilerplate
+IDENTITY_KEY=email
